# keyflow

./: README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: security.yml
client/: Dockerfile  env.example  package.json  tsconfig.json
client/src/: app.d.ts
client/src/lib/: types.ts
client/src/lib/i18n/: index.ts  locales.ts
client/src/lib/i18n/translations/: en-US.json
client/src/params/: locale.ts
client/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts
client/src/routes/[locale=locale]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
client/src/routes/[locale=locale]/login/: +page.server.ts  +page.svelte
client/static/: robots.txt  sitemap.xml
docs/infra/: DEPLOYMENT.md
docs/security/: SUPPLY_CHAIN.md
server/: Cargo.toml  Dockerfile  env.example
server/migrations/: 20231108001_init.sql  20231108002_enforce_email_unique.sql
server/src/: config.rs  db.rs  error.rs  main.rs  models.rs  session.rs  state.rs
server/src/routes/: auth.rs  health.rs  mod.rs
server/src/security/: csrf.rs  mod.rs  rate_limit.rs
